package com.panda.study.designmodel.flyweight;

/**
 * Created by Administrator on 2019/8/1.
 */
public abstract class WebSite {
    public abstract void use(User user);
}
