package com.panda.study.designmodel.flyweight;

/**
 * Created by Administrator on 2019/8/1.
 */
public class User {
    private String name;

    public User(String name) {
        this.name = name;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }
}
